fixes - padding on smaller screens

--- a/static/css/style.scss
+++ b/static/css/style.scss
@@ -7847,7 +7847,7 @@ textarea.form-control {
   position: relative; }
   @media (max-width: 767.98px) {
     .ftco-section {
-      padding: 6em 0; } }
+      padding: 20px 0; } }
 
 .ftco-bg-dark {
   background: #3c312e; }
